# acdaemon

./: .gitignore  Main.hs  README.md  README.ms  RestServer.hs  Trie.hs  acdaemon.cabal
cbits/: trie.c
include/: trie.h
